JOORSAND/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New Business</fullName>
        <description>New Business Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>00_Nurturing</fullName>
        </values>
        <values>
            <fullName>01_Qualified</fullName>
        </values>
        <values>
            <fullName>02_Prospect Outreach</fullName>
        </values>
        <values>
            <fullName>03_First Meeting Scheduled</fullName>
        </values>
        <values>
            <fullName>04_Discovery</fullName>
        </values>
        <values>
            <fullName>05_Demo Completed</fullName>
        </values>
        <values>
            <fullName>06_Decision Maker Engaged</fullName>
        </values>
        <values>
            <fullName>07_Verbal</fullName>
        </values>
        <values>
            <fullName>08_Negotiations</fullName>
        </values>
        <values>
            <fullName>09_Contract Sent</fullName>
        </values>
        <values>
            <fullName>10_Legal%2FRedlines</fullName>
        </values>
        <values>
            <fullName>11_Closed Won</fullName>
        </values>
        <values>
            <fullName>12_Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partnership</fullName>
        <description>Partnership sales process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>11_Closed Won</fullName>
        </values>
        <values>
            <fullName>12_Closed Lost</fullName>
        </values>
        <values>
            <fullName>Agreement</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Piloting</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <description>Renewal Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>00_Expected Churn</fullName>
        </values>
        <values>
            <fullName>05_Open Renewal</fullName>
        </values>
        <values>
            <fullName>06_Decision Maker Engaged</fullName>
        </values>
        <values>
            <fullName>07_Verbal</fullName>
        </values>
        <values>
            <fullName>08_Negotiations</fullName>
        </values>
        <values>
            <fullName>09_Contract Sent</fullName>
        </values>
        <values>
            <fullName>10_Legal%2FRedlines</fullName>
        </values>
        <values>
            <fullName>11_Closed Won</fullName>
        </values>
        <values>
            <fullName>12_Closed Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARR_Weighted__c</fullName>
        <description>ARR weighted based on stage probability.</description>
        <formula>ARR__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <description>Recurring Amount divided by the number of Contract Months in the term, multiplied by 12 to get the Annual Value.</description>
        <formula>IF(ISBLANK(MRR__c), Amount, MRR__c*12)</formula>
        <inlineHelpText>Annual Recurring Revenue</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_Payment__c</fullName>
        <description>Divides the TCV by the Number of Payments for finance to know how much to invoice each time.</description>
        <formula>Amount/Number_of_Payments__c</formula>
        <inlineHelpText>Calculates the payment amount per invoice based on TCV and Number of Payments.</inlineHelpText>
        <label>Amount per Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Discount_from_Rate_Card__c</fullName>
        <description>Returns the % discount from suggested rate card (via pricing matrix formula) only if there is a discount. Otherwise it returns 0%.</description>
        <formula>IF(
AND(
Annual_Fee_Quote__c &gt; Recurring_Total__c,
Recurring_Total__c &gt; 0
),

(Annual_Fee_Quote__c - Recurring_Total__c)/Annual_Fee_Quote__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % discount from what the Pricing Matrix is saying against what you currently value the Opportunity at.</inlineHelpText>
        <label>Annual Discount from Rate Card</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Fee_Quote__c</fullName>
        <description>References the Pricing Matrix Annual Fee Number and returns the associated quote amount for that value.</description>
        <formula>IF(Pricing_Matrix_Annual_Fee_Number__c &lt; 10, 7500,

CASE(Pricing_Matrix_Annual_Fee_Number__c, 
10, 8000, 
10.5, 8000, 
11, 8000, 
11.5, 9000, 
12, 9000, 
12.5, 10000, 
13, 13000, 
13.5, 13000, 
14, 14000, 
14.5, 15000, 
15, 15000, 
15.5, 15000, 
16, 16000, 
16.5, 18000, 
17, 20000, 
17.5, 20000, 
18, 22000, 
18.5, 25000, 
19, 28000, 
19.5, 30000, 
20, 30000, 
20.5, 33000, 
21, 35000, 
21.5, 35000,
22, 38000, 
22.5, 38000, 
23, 38000, 
23.5, 38000, 
24, 38000, 
24.5, 40000, 
25, 40000, 
25.5, 43000, 
26, 45000, 
26.5, 45000, 
50000)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The suggested annual fee for this customer per the Pricing Matrix.</inlineHelpText>
        <label>Annual Fee Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Risk_Date__c</fullName>
        <description>The date the Renewal was marked At Risk.</description>
        <inlineHelpText>When the Renewal was marked At Risk.</inlineHelpText>
        <label>At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>At_Risk_Flag__c</fullName>
        <description>Visual cue when looking at Renewal to quickly see if it&apos;s been marked &quot;At Risk&quot;.</description>
        <formula>IF(
At_Risk__c = FALSE,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Not At Risk&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;At Risk&quot;)
)</formula>
        <inlineHelpText>Red = At Risk
Green = Not At Risk</inlineHelpText>
        <label>At Risk Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_Risk_Notes__c</fullName>
        <description>Used by the CSM to give context to the at risk designation of the renewal.</description>
        <inlineHelpText>Why is this Renewal at risk? What&apos;s happening with the Account?</inlineHelpText>
        <label>At Risk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote Renewals that are at risk of not renewing. Also referred to as Red. This is a warning that comes before something is Expected Churn, which is consider lost for good.</description>
        <inlineHelpText>(RED ACCOUNT) Check this to indicate this Renewal is at risk of not closing.</inlineHelpText>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <description>Specifies whether or not the client has opted out of Auto Renew.</description>
        <inlineHelpText>Will this customer Auto Renew?</inlineHelpText>
        <label>Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <description>Pulled from Contact record in Billing Contact lookup field.</description>
        <formula>Billing_Contact__r.Email</formula>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <description>Pulled from Contact record in Billing Contact lookup field.</description>
        <formula>Billing_Contact__r.Phone</formula>
        <label>Billing Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Contact who is the billing point of contact.</description>
        <inlineHelpText>Who should finance send invoices and contact about billing inquiries?</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (BIlling Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Details__c</fullName>
        <description>Area for sales to write in any special details about billing, i.e. non-standard terms.</description>
        <inlineHelpText>Indicate any other detail or non-standard terms in the billing agreement for finance.</inlineHelpText>
        <label>Billing Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Term__c</fullName>
        <description>Indicates how long after being invoiced the client has to pay in full.</description>
        <inlineHelpText>How long after receiving the invoice does the client have to pay?</inlineHelpText>
        <label>Billing Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Due on Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Net 150</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Retailer_Icon__c</fullName>
        <description>Visual aid for users to easily find the related list this connects to. This sits above the field rolling up data from that list, so it&apos;s easy to see what contributes to the count of Brands/Retailers.</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSHf&quot;, &quot;Brand/Retailer&quot;)</formula>
        <label>Brand/Retailer Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands_Entity_Migration_ONLY__c</fullName>
        <description>This field is to capture the brands/entity for each contract from the initial data upload (source: &quot;6_29_joor_data_export.xlsx&quot; from Kristian). Moving forward, these brands should be attached as Accounts via the Brand/Retailer related list on the Opportunity.</description>
        <label>Brands/Entity (Migration ONLY)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Authority__c</fullName>
        <description>Pulled from the Contact record&apos;s Contact Authority.</description>
        <formula>IF(
NOT(ISBLANK(Champion__c)), 
Champion__r.Contact_Authority__c, 
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;NO CHAMPION IDENTIFIED&quot;)+&quot; NO CHAMPION IDENTIFIED&quot;
)</formula>
        <inlineHelpText>Above The Line includes Director title and above.</inlineHelpText>
        <label>Champion Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_Title__c</fullName>
        <description>Pulled from the Contact record&apos;s Title.</description>
        <formula>Champion__r.Title</formula>
        <label>Champion Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>For sales to indicate who are internal champion is at the prospect company.</description>
        <inlineHelpText>Who is our main contact on the prospect side?</inlineHelpText>
        <label>Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Churn_Stage__c</fullName>
        <description>For reporting.</description>
        <formula>IF(NOT(ISPICKVAL(Type, &quot;Renewal&quot;)), &quot;--&quot;,

IF(IsWon, &quot;Renewed&quot;,

IF(IsClosed, &quot;Churned&quot;,

IF(
ISPICKVAL(StageName, &quot;Expected Churn&quot;), &quot;Expected Churn&quot;,

IF(
At_Risk__c = TRUE, &quot;At Risk&quot;,

&quot;Healthy&quot;)))))</formula>
        <label>Churn Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <description>Returns the month based on Close Date. Used for year over year analysis in Reports.</description>
        <formula>CASE(MONTH(CloseDate), 
1, &quot;January&quot; , 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;*MISSING CLOSE DATE*&quot;)</formula>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Quarter__c</fullName>
        <description>Returns the fiscal quarter based on Close Date. Used for year over year analysis in Reports.</description>
        <formula>CASE(MONTH(CloseDate), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;*MISSING CLOSE DATE*&quot;)</formula>
        <label>Close Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Year__c</fullName>
        <description>Returns the year the Opportunity was closed. For easier year over year reporting.</description>
        <formula>TEXT(YEAR(CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_This_Quarter__c</fullName>
        <description>Checked automatically whenever the Opportunity Close Date is in the current quarter (based on today&apos;s date).</description>
        <formula>AND( 
YEAR(CloseDate) = YEAR(TODAY()), 
CASE(MONTH(CloseDate), 1,1, 2,1, 3,1, 4,2, 5,2, 6,2, 7,3, 8,3, 9,3, 10,4, 11,4, 12,4, 98) 
= 
CASE(MONTH(TODAY()), 1,1, 2,1, 3,1, 4,2, 5,2, 6,2, 7,3, 8,3, 9,3, 10,4, 11,4, 12,4, 99) 
)</formula>
        <inlineHelpText>Checked if this opportunity is set to close this quarter.</inlineHelpText>
        <label>Closing This Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Source__c</fullName>
        <description>Dependent on Lead Source being &quot;Competitor&quot;.</description>
        <inlineHelpText>Input when the Account Source is Competitor.</inlineHelpText>
        <label>Competitor Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Momentis</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Used in conjunction with any Loss Reason related to competition.</description>
        <inlineHelpText>Select when Loss Reason contains Competitor.</inlineHelpText>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loss_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Momentis</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>The date the Contract ends.</description>
        <inlineHelpText>Enter the date this contract ends.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Months__c</fullName>
        <description>Calculates the exact number of months the contract is for based on Contract Start Date and Contract End Date.</description>
        <formula>((YEAR( Contract_End_Date__c+1) - YEAR( Contract_Start_Date__c)) *12) 
+ (MONTH( Contract_End_Date__c+1) - MONTH( Contract_Start_Date__c)) 
+ (Day(Contract_End_Date__c+1) - Day(Contract_Start_Date__c)) 
/( 
if(month(Contract_End_Date__c)=12,31, 
if(month(Contract_End_Date__c)=11,30, 
if(month(Contract_End_Date__c)=10,31, 
if(month(Contract_End_Date__c)=9,30, 
if(month(Contract_End_Date__c)=8,31, 
if(month(Contract_End_Date__c)=7,31, 
if(month(Contract_End_Date__c)=6,30, 
if(month(Contract_End_Date__c)=5,31, 
if(month(Contract_End_Date__c)=4,30, 
if(month(Contract_End_Date__c)=3,31, 
if(month(Contract_End_Date__c)=2,28, 
31))))))))))))</formula>
        <inlineHelpText>The number of months between the Contract Start Date and Contract End Date.</inlineHelpText>
        <label>Contract Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>The date the Contract starts.</description>
        <inlineHelpText>Enter the date this contract starts.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Timing__c</fullName>
        <description>Returns &quot;Active&quot;, &quot;Past&quot;, or &quot;Future&quot; depending on where TODAY() falls relative to contract dates. Used for easily reporting on Opportunities by contract timing.</description>
        <formula>IF(
OR(
ISBLANK(Contract_Start_Date__c),
ISBLANK(Contract_End_Date__c)
),
&quot;Missing Dates&quot;,

IF(
Contract_End_Date__c &lt; TODAY(),
&quot;Past&quot;,

IF(
AND(
Contract_End_Date__c &gt; TODAY(),
Contract_Start_Date__c &lt; TODAY()
),
&quot;Active&quot;,
&quot;Future&quot;
)))</formula>
        <inlineHelpText>Is the contract Past, Active, or Future?</inlineHelpText>
        <label>Contract Timing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Checks the Opportunity for transactional products and returns &quot;Transactional&quot; if any exist, otherwise it returns &quot;Recurring Revenue&quot;.</description>
        <formula>IF(Transactional_Products_Included__c &gt; 0, &quot;Transactional&quot;, &quot;Recurring Revenue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <description>Returns the month based on Created Date. Used for year over year analysis in Reports.</description>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;January&quot; , 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;*MISSING CREATED DATE*&quot;)</formula>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Quarter__c</fullName>
        <description>Returns the fiscal quarter based on Created Date. Used for year over year analysis in Reports.</description>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;*MISSING CREATED DATE*&quot;)</formula>
        <label>Created Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <description>Returns the year the Opportunity was created. For easier year over year reporting.</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Notes__c</fullName>
        <description>Field to note the reason for credit risk.</description>
        <inlineHelpText>FINANCE ONLY</inlineHelpText>
        <label>Credit Risk Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark accounts that are in arrears.</description>
        <inlineHelpText>FINANCE ONLY</inlineHelpText>
        <label>Credit Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Sync__c</fullName>
        <inlineHelpText>Select N/A if Full Integration.</inlineHelpText>
        <label>Customer Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Customer Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_At_Risk__c</fullName>
        <description>The number of days the Renewal has been At Risk.</description>
        <formula>TODAY()-DATEVALUE(At_Risk_Date__c)</formula>
        <inlineHelpText>How long the Renewal has been At Risk (days).</inlineHelpText>
        <label>Days At Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Next_Steps_Updated__c</fullName>
        <description>The number of days since next steps were last updated.</description>
        <formula>IF(
ISBLANK(Next_Steps_Changed_Date__c), 999,
TODAY()-DATEVALUE(Next_Steps_Changed_Date__c)
)</formula>
        <inlineHelpText>How many days since next steps were last updated.</inlineHelpText>
        <label>Days Since Next Steps Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Authority__c</fullName>
        <description>Pulled from the Contact record&apos;s Contact Authority.</description>
        <formula>IF(
NOT(ISBLANK(Decision_Maker__c)), 
Decision_Maker__r.Contact_Authority__c, 
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;NO DECISION MAKER IDENTIFIED&quot;)+&quot; NO DECISION MAKER IDENTIFIED&quot;
)</formula>
        <inlineHelpText>Above The Line includes Director title and above.</inlineHelpText>
        <label>Decision Maker Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Title__c</fullName>
        <description>Pulled from the Contact record&apos;s Title.</description>
        <formula>Decision_Maker__r.Title</formula>
        <label>Decision Maker Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>For sales to indicate who will be making the decision for the prospect company.</description>
        <inlineHelpText>Who will be making the ultimate decision to buy?</inlineHelpText>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_Target_Due_Date__c</fullName>
        <description>Indicates when development is targeted to be done.</description>
        <inlineHelpText>When is the development work due?</inlineHelpText>
        <label>Dev Target Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Required_By__c</fullName>
        <description>Indicates who development is required by in Partnership opportunities.</description>
        <inlineHelpText>Who is development required by?</inlineHelpText>
        <label>Development Required By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JOOR</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <label>Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Meeting_Date__c</fullName>
        <description>To document the date of the first meeting since the opportunity is created when the first meeting is scheduled.</description>
        <inlineHelpText>The date of the meeting you scheduled that is the source of this Opportunity.</inlineHelpText>
        <label>First Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Integration__c</fullName>
        <label>Full Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>New Flat File</fullName>
                </value>
                <value>
                    <fullName>Pre-Built Flat File</fullName>
                </value>
                <value>
                    <fullName>New API</fullName>
                </value>
                <value>
                    <fullName>Pre-Built API</fullName>
                </value>
                <value>
                    <fullName>AIMS</fullName>
                    <isActive>false</isActive>
                    <label>AIMS</label>
                </value>
                <value>
                    <fullName>API</fullName>
                    <isActive>false</isActive>
                    <label>API</label>
                </value>
                <value>
                    <fullName>EDI 850</fullName>
                    <isActive>false</isActive>
                    <label>EDI 850</label>
                </value>
                <value>
                    <fullName>Kellwood API</fullName>
                    <isActive>false</isActive>
                    <label>Kellwood API</label>
                </value>
                <value>
                    <fullName>Order JOINT</fullName>
                    <isActive>false</isActive>
                    <label>Order JOINT</label>
                </value>
                <value>
                    <fullName>RLM</fullName>
                    <isActive>false</isActive>
                    <label>RLM</label>
                </value>
                <value>
                    <fullName>Sync Suite (all flat file)</fullName>
                    <isActive>false</isActive>
                    <label>Sync Suite (all flat file)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Interest_Date__c</fullName>
        <description>Indicates the date Accounts that have not moved forward or churned would like to re-engage in the future. Paired with Future Interest when that field&apos;s value is &quot;Yes&quot;.</description>
        <inlineHelpText>The date this Account would like to reconnect about working with JOOR. Required when Future Interest is &quot;Yes&quot;.</inlineHelpText>
        <label>Future Interest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Interest__c</fullName>
        <description>Indicates whether or not Accounts that have not moved forward or churned have an interest in the future. Paired with Future Interest Date when the value is &quot;Yes&quot;.</description>
        <inlineHelpText>Will this Account have future interest in working with JOOR?</inlineHelpText>
        <label>Future Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Discount_from_Rate_Card__c</fullName>
        <description>Returns the % discount from suggested rate card (via pricing matrix formula) only if there is a discount. Otherwise it returns 0%.</description>
        <formula>IF(
AND(
Integration_Quote__c &gt; One_Time_Fee_Total__c,
One_Time_Fee_Total__c &gt; 0
),

(Integration_Quote__c - One_Time_Fee_Total__c)/Integration_Quote__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % discount from what the Pricing Matrix is saying against what you currently value the Opportunity at.</inlineHelpText>
        <label>Integration Discount from Rate Card</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
</CustomObject>